--- a/HsvColorPickers/AlphaPicker.xaml
+++ b/HsvColorPickers/AlphaPicker.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="HsvColorPickers.AlphaPicker"
+    x:Class="HSVColorPickers.AlphaPicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:HsvColorPickers"
+    xmlns:local="using:HSVColorPickers"
     xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
     d:DesignHeight="50"
