--- a/HsvColorPickers/PalettePicker.xaml
+++ b/HsvColorPickers/PalettePicker.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="HsvColorPickers.PalettePicker"
+    x:Class="HSVColorPickers.PalettePicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Colors="using:HsvColorPickers"
+    xmlns:Colors="using:HSVColorPickers"
     xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
     MinHeight="240" >
