--- a/HsvColorPickers/RGBPicker.xaml
+++ b/HsvColorPickers/RGBPicker.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="HsvColorPickers.RGBPicker"
+    x:Class="HSVColorPickers.RGBPicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Colors="using:HsvColorPickers"
+    xmlns:Colors="using:HSVColorPickers"
     mc:Ignorable="d"
     Height="170" >
 
