--- a/HsvColorPickers/HSVPicker.xaml
+++ b/HsvColorPickers/HSVPicker.xaml
@@ -6,6 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Colors="using:HSVColorPickers"
     mc:Ignorable="d"
+    HorizontalAlignment="Stretch"
+    MinWidth="140"
     Height="170"
     >
 
@@ -49,19 +51,19 @@
         </Grid.RowDefinitions>
 
         <!--H-->
-        <TextBlock Grid.Row="0" Text="H" Opacity="0.8"/>
+        <TextBlock Grid.Row="0" Text="H" Opacity="0.8" VerticalAlignment="Center"/>
         <Colors:NumberPicker x:Name="HPicker" Grid.Row="0" Unit="º" Minimum="0" Maximum="360" HorizontalAlignment="Right" />
         <Colors:TouchSlider x:Name="HSlider" Grid.Row="1" Minimum="0" Maximum="360" SliderBrush="{StaticResource HBrush}" />
 
         <!--S-->
-        <TextBlock Grid.Row="2" Text="S" Opacity="0.8"/>
+        <TextBlock Grid.Row="2" Text="S" Opacity="0.8" VerticalAlignment="Center"/>
         <Colors:NumberPicker x:Name="SPicker" Grid.Row="2" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" />
         <Colors:TouchSlider x:Name="SSlider" Grid.Row="3" Minimum="0" Maximum="100" SliderBrush="{StaticResource SBrush}" />
 
-        <!--L-->
-        <TextBlock Grid.Row="4" Text="V" Opacity="0.8"/>
+        <!--V-->
+        <TextBlock Grid.Row="4" Text="V" Opacity="0.8" VerticalAlignment="Center"/>
         <Colors:NumberPicker x:Name="VPicker" Grid.Row="4" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" />
-        <Colors:TouchSlider x:Name="VSlider" Grid.Row="5" Minimum="0" Maximum="100" SliderBrush="{StaticResource LBrush}" />
+        <Colors:TouchSlider x:Name="VSlider" Grid.Row="5" Minimum="0" Maximum="100" SliderBrush="{StaticResource VBrush}" />
 
     </Grid>
 
