--- a/HsvColorPickers/NumberPicker.xaml
+++ b/HsvColorPickers/NumberPicker.xaml
@@ -1,37 +1,33 @@
 ﻿<UserControl
+    x:Name="UserControl"
     x:Class="HSVColorPickers.NumberPicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    mc:Ignorable="d"    
+    FontSize="14"
+    Width="50" 
+    MinHeight="22" 
+    HorizontalAlignment="Stretch" 
+    VerticalAlignment="Stretch" 
+    BorderThickness="0" 
+    BorderBrush="Transparent" 
+    Background="Transparent"
     >
 
-
-    <UserControl.Resources>
-
-        <Style x:Key="ButtonStyle" TargetType="Button">
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="FontWeight" Value="SemiBold" />
-            <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-            <Setter Property="Padding" Value="6,2" />
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="BorderBrush" Value="Transparent" />
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="MinWidth" Value="50" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Width" Value="Auto" />
-            <Setter Property="MinHeight" Value="48" />
-        </Style>
-
-    </UserControl.Resources>
-
-
-    <Button x:Name="Button" Height="24" Style="{StaticResource ButtonStyle}">
+    <Button x:Name="Button" 
+            FontSize="{x:Bind UserControl.FontSize,Mode=OneWay}"
+            Width="{x:Bind UserControl.Width,Mode=OneWay}"
+            Height="{x:Bind UserControl.Height,Mode=OneWay}"
+            HorizontalAlignment="{x:Bind UserControl.HorizontalAlignment,Mode=OneWay}"
+            VerticalAlignment="{x:Bind UserControl.VerticalAlignment,Mode=OneWay}"
+            BorderThickness="{x:Bind UserControl.BorderThickness,Mode=OneWay}"
+            BorderBrush="{x:Bind UserControl.BorderBrush,Mode=OneWay}"
+            Background="{x:Bind UserControl.Background,Mode=OneWay}"
+            >
         <Button.Flyout>
-            <Flyout  x:Name="Flyout" Placement="Bottom" >
+            <Flyout x:Name="Flyout" Placement="Bottom">
                 <Grid Width="180" Height="180" Margin="-10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
@@ -46,29 +42,29 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button  x:Name="Seven" Grid.Row="0" Grid.Column="0" Content="7" Style="{StaticResource ButtonStyle}" />
-                    <Button x:Name="Eight" Grid.Row="0" Grid.Column="1" Content="8" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Nine" Grid.Row="0" Grid.Column="2" Content="9" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Back" Grid.Row="0" Grid.Column="3" Content="&#xEB96;" FontFamily="Segoe MDL2 Assets" Style="{StaticResource ButtonStyle}"/>
+                    <Button  x:Name="Seven" Grid.Row="0" Grid.Column="0" Content="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent" />
+                    <Button x:Name="Eight" Grid.Row="0" Grid.Column="1" Content="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Nine" Grid.Row="0" Grid.Column="2" Content="9" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Back" Grid.Row="0" Grid.Column="3" Content="&#xEB96;" FontFamily="Segoe MDL2 Assets" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
 
-                    <Button x:Name="Four" Grid.Row="1" Grid.Column="0" Content="4" Style="{StaticResource ButtonStyle}"/>
-                    <Button  x:Name="Five" Grid.Row="1" Grid.Column="1" Content="5" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Six" Grid.Row="1" Grid.Column="2" Content="6" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Decimal" Grid.Row="1" Grid.Column="3" Content="C" Style="{StaticResource ButtonStyle}"/>
+                    <Button x:Name="Four" Grid.Row="1" Grid.Column="0" Content="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button  x:Name="Five" Grid.Row="1" Grid.Column="1" Content="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Six" Grid.Row="1" Grid.Column="2" Content="6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Decimal" Grid.Row="1" Grid.Column="3" Content="C" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
 
-                    <Button  x:Name="One" Grid.Row="2" Grid.Column="0" Content="1" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Two" Grid.Row="2" Grid.Column="1" Content="2" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Three" Grid.Row="2" Grid.Column="2" Content="3" Style="{StaticResource ButtonStyle}"/>
-                    <Button x:Name="Negative" Grid.Row="2" Grid.Column="3" Content="-" Style="{StaticResource ButtonStyle}"/>
+                    <Button  x:Name="One" Grid.Row="2" Grid.Column="0" Content="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Two" Grid.Row="2" Grid.Column="1" Content="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Three" Grid.Row="2" Grid.Column="2" Content="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                    <Button x:Name="Negative" Grid.Row="2" Grid.Column="3" Content="-" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
 
-                    <Button x:Name="Zero" Grid.Row="3" Grid.Column="0" Content="0" Style="{StaticResource ButtonStyle}"/>
+                    <Button x:Name="Zero" Grid.Row="3" Grid.Column="0" Content="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
                     <Grid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="OK" FontSize="22" Grid.Column="0" Content="&#xEC61;" FontFamily="Segoe MDL2 Assets" Style="{StaticResource ButtonStyle}"/>
-                        <Button x:Name="Cancel" FontSize="22" Grid.Column="1" Content="&#xEB90;" FontFamily="Segoe MDL2 Assets" Style="{StaticResource ButtonStyle}"/>
+                        <Button x:Name="OK" FontSize="22" Grid.Column="0" Content="&#xEC61;" FontFamily="Segoe MDL2 Assets" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
+                        <Button x:Name="Cancel" FontSize="22" Grid.Column="1" Content="&#xEB90;" FontFamily="Segoe MDL2 Assets" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Background="Transparent"/>
                     </Grid>
 
                 </Grid>
