--- a/HsvColorPickers/StrawPicker.xaml
+++ b/HsvColorPickers/StrawPicker.xaml
@@ -1,10 +1,13 @@
 ﻿<UserControl
+    x:Name="UserControl"
     x:Class="HSVColorPickers.StrawPicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    mc:Ignorable="d"   
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Height="36"
     Width="70"
     d:DesignHeight="50"
     d:DesignWidth="50">
@@ -13,13 +16,13 @@
         <SolidColorBrush x:Name="SolidColorBrushName" x:Key="SolidColorBrushKey" Color="White"/>
     </UserControl.Resources>
 
-    <Grid >
+    <Grid Background="{x:Bind UserControl.Background,Mode=OneWay}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
 
-        <Border x:Name="Border" Background="Transparent" >
+        <Border x:Name="IconBorder" Background="Transparent">
             <FontIcon Glyph="&#xEF3C;" FontFamily="Segoe MDL2 Assets" />
         </Border>
 
