--- a/HsvColorPickers/ColorPicker.xaml
+++ b/HsvColorPickers/ColorPicker.xaml
@@ -70,18 +70,20 @@
         <Grid Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <local:SwatchesPicker x:Name="SwatchesPicker" TabIndex="0"/>
-            <local:WheelPicker x:Name="WheelPicker" TabIndex="1"/>
-            <local:RGBPicker x:Name="RGBPicker" TabIndex="2" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
-            <local:HSVPicker x:Name="HSVPicker" TabIndex="3" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+            <local:WheelPicker x:Name="WheelPicker" TabIndex="1" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
+            <local:RGBPicker x:Name="RGBPicker" TabIndex="2" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
+            <local:HSVPicker x:Name="HSVPicker" TabIndex="3" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
 
-            <local:PaletteHuePicker x:Name="PaletteHuePicker" TabIndex="4"/>
-            <local:PaletteSaturationPicker x:Name="PaletteSaturationPicker" TabIndex="5"/>
-            <local:PaletteValuePicker x:Name="PaletteValuePicker" TabIndex="6"/>
+            <local:PaletteHuePicker x:Name="PaletteHuePicker" TabIndex="4" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
+            <local:PaletteSaturationPicker x:Name="PaletteSaturationPicker" TabIndex="5" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
+            <local:PaletteValuePicker x:Name="PaletteValuePicker" TabIndex="6" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
 
+            <local:CirclePicker x:Name="CirclePicker" TabIndex="7" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
+            
         </Grid>
 
         <!--Alpha-->
-        <local:AlphaPicker x:Name="AlphaPicker" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <local:AlphaPicker x:Name="AlphaPicker" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" Stroke="{x:Bind Stroke, Mode=OneWay}"/>
 
         <ContentControl Height="12"/>
 
