--- a/HsvColorPickers/HSVPicker.xaml
+++ b/HsvColorPickers/HSVPicker.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Colors="using:HSVColorPickers"
+    xmlns:hsvColorPickers="using:HSVColorPickers"
     mc:Ignorable="d"
     HorizontalAlignment="Stretch"
     MinWidth="140"
@@ -52,18 +52,18 @@
 
         <!--H-->
         <TextBlock Grid.Row="0" Text="H" Opacity="0.8" VerticalAlignment="Center"/>
-        <Colors:NumberPicker x:Name="HPicker" Grid.Row="0" Unit="º" Minimum="0" Maximum="360" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
-        <Colors:TouchSlider x:Name="HSlider" Grid.Row="1" Minimum="0" Maximum="360" SliderBrush="{StaticResource HBrush}" />
+        <hsvColorPickers:NumberPicker x:Name="HPicker" Grid.Row="0" Unit="º" Minimum="0" Maximum="360" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:TouchSlider x:Name="HSlider" Grid.Row="1" Minimum="0" Maximum="360" SliderBrush="{StaticResource HBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
         <!--S-->
         <TextBlock Grid.Row="2" Text="S" Opacity="0.8" VerticalAlignment="Center"/>
-        <Colors:NumberPicker x:Name="SPicker" Grid.Row="2" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
-        <Colors:TouchSlider x:Name="SSlider" Grid.Row="3" Minimum="0" Maximum="100" SliderBrush="{StaticResource SBrush}" />
+        <hsvColorPickers:NumberPicker x:Name="SPicker" Grid.Row="2" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:TouchSlider x:Name="SSlider" Grid.Row="3" Minimum="0" Maximum="100" SliderBrush="{StaticResource SBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
         <!--V-->
         <TextBlock Grid.Row="4" Text="V" Opacity="0.8" VerticalAlignment="Center"/>
-        <Colors:NumberPicker x:Name="VPicker" Grid.Row="4" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
-        <Colors:TouchSlider x:Name="VSlider" Grid.Row="5" Minimum="0" Maximum="100" SliderBrush="{StaticResource VBrush}" />
+        <hsvColorPickers:NumberPicker x:Name="VPicker" Grid.Row="4" Unit="%" Minimum="0" Maximum="100" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:TouchSlider x:Name="VSlider" Grid.Row="5" Minimum="0" Maximum="100" SliderBrush="{StaticResource VBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
     </Grid>
 
