--- a/HSVColorPickers/CirclePicker.xaml
+++ b/HSVColorPickers/CirclePicker.xaml
@@ -7,7 +7,8 @@
     xmlns:hsvColorPickers="using:HSVColorPickers"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400"
+    d:DesignWidth="400"   
+    MinHeight="240" 
     >
 
 
