--- a/HSVColorPickers/PalettePickers/PalettePicker.xaml
+++ b/HSVColorPickers/PalettePickers/PalettePicker.xaml
@@ -7,7 +7,8 @@
     xmlns:hsvColorPickers="using:HSVColorPickers"
     xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
-    MinHeight="240" >
+    MinHeight="240" 
+    >
 
 
     <UserControl.Resources>
