--- a/HSVColorPickers/CirclePicker.xaml
+++ b/HSVColorPickers/CirclePicker.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"   
-    MinHeight="240" 
+    MinWidth="200"
+    MinHeight="200"
     >
 
 
