--- a/HSVColorPickers.TestApp/MainPage.xaml
+++ b/HSVColorPickers.TestApp/MainPage.xaml
@@ -58,7 +58,7 @@
             <hSVColorPickers:PaletteSaturationPicker x:Name="PaletteSaturationPicker" TabIndex="6"/>
             <hSVColorPickers:PaletteValuePicker x:Name="PaletteValuePicker" TabIndex="7"/>
 
-            <hSVColorPickers:CirclePicker x:Name="CirclePicker" TabIndex="8"/>
+            <hSVColorPickers:CirclePicker x:Name="CirclePicker" TabIndex="8" VerticalAlignment="Top"/>
 
 
         </Grid>
