--- a/HsvColorPickers/RGBPicker.xaml
+++ b/HsvColorPickers/RGBPicker.xaml
@@ -36,27 +36,27 @@
 
     <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
         <!--R-->
         <TextBlock Grid.Row="0" Text="R" Opacity="0.8" VerticalAlignment="Center"/>
-        <hsvColorPickers:NumberPicker x:Name="RPicker" Grid.Row="0" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:NumberPicker x:Name="RPicker" Grid.Row="0" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" ButtonStyle="{x:Bind ButtonStyle,Mode=OneWay}"/>
         <hsvColorPickers:TouchSlider x:Name="RSlider" Grid.Row="1" Minimum="0" Maximum="255" SliderBrush="{StaticResource RBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
         <!--G-->
         <TextBlock Grid.Row="2" Text="G" Opacity="0.8" VerticalAlignment="Center"/>
-        <hsvColorPickers:NumberPicker x:Name="GPicker" Grid.Row="2" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:NumberPicker x:Name="GPicker" Grid.Row="2" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" ButtonStyle="{x:Bind ButtonStyle,Mode=OneWay}"/>
         <hsvColorPickers:TouchSlider x:Name="GSlider" Grid.Row="3" Minimum="0" Maximum="255" SliderBrush="{StaticResource GBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
         <!--B-->
         <TextBlock Grid.Row="4" Text="B" Opacity="0.8" VerticalAlignment="Center"/>
-        <hsvColorPickers:NumberPicker x:Name="BPicker" Grid.Row="4" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}"/>
+        <hsvColorPickers:NumberPicker x:Name="BPicker" Grid.Row="4" Minimum="0" Maximum="255" HorizontalAlignment="Right" Placement="{x:Bind Placement,Mode=OneWay}" FlyoutPresenterStyle="{x:Bind FlyoutPresenterStyle,Mode=OneWay}" ButtonStyle="{x:Bind ButtonStyle,Mode=OneWay}"/>
         <hsvColorPickers:TouchSlider x:Name="BSlider" Grid.Row="5" Minimum="0" Maximum="255" SliderBrush="{StaticResource BBrush}" BorderBrush="{x:Bind Stroke, Mode=OneWay}"/>
 
     </Grid>
