--- a/HsvColorPickers/TouchSlider.xaml
+++ b/HsvColorPickers/TouchSlider.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl
+﻿<hsvcolorpickers:TouchSliderBase
+    xmlns:hsvcolorpickers="using:HSVColorPickers"
     x:Name="UserControl"
     x:Class="HSVColorPickers.TouchSlider"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -13,13 +14,16 @@
     BorderThickness="1" 
     BorderBrush="Gray"
     Background="Gray"
-    d:DesignHeight="22"
-    d:DesignWidth="111"
     >
 
-    <Grid>
-
-        <Border x:Name="Border" Padding="0" CornerRadius="12" 
+    <Grid x:Name="_RootGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition x:Name="_LeftGridLength" Width="0"/>
+            <ColumnDefinition x:Name="_CenterGridLength" Width="Auto"/>
+            <ColumnDefinition x:Name="_RightGridLength" Width="*"/>
+        </Grid.ColumnDefinitions>
+                
+        <Border x:Name="Border" Grid.ColumnSpan="3" Padding="0" CornerRadius="12" 
             Height="{x:Bind UserControl.Height,Mode=OneWay}"
             BorderThickness="{x:Bind UserControl.BorderThickness,Mode=OneWay}"
             BorderBrush="{x:Bind UserControl.BorderBrush,Mode=OneWay}"
@@ -27,30 +31,9 @@
             >
             <!--Background-->
         </Border>
-
-        <Canvas Height="24" HorizontalAlignment="Stretch" VerticalAlignment="Center">
-            <Grid x:Name="Ellipse" Width="24" Height="24" Background="Transparent">
-                <Ellipse StrokeThickness="5" Width="24" Height="24" Stroke="Black" Opacity="0.5"/>
-                <Ellipse StrokeThickness="3" Width="22" Height="22" Stroke="White"/>
-            </Grid>
-        </Canvas>
-
-        <Thumb x:Name="Thumb" ManipulationMode="TranslateX" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Thumb.Style>
-                <Style TargetType="Thumb">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="Thumb">
-                                <Border Background="Transparent"/>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </Thumb.Style>
-        </Thumb>
+        
+        <Ellipse Grid.Column="1" StrokeThickness="5" Width="24" Height="24" Stroke="Black" Opacity="0.5"/>
+        <Ellipse Grid.Column="1" StrokeThickness="3" Width="22" Height="22" Stroke="White"/>
 
     </Grid>
-</UserControl>
-
-
-
+</hsvcolorpickers:TouchSliderBase>
