--- a/HsvColorPickers/ColorPicker.xaml
+++ b/HsvColorPickers/ColorPicker.xaml
@@ -23,16 +23,19 @@
         <!--Head-->
         <Grid Height="40">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="12"/>
+                <ColumnDefinition Width="18"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="4"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock VerticalAlignment="Center">
+            <!--Grab the focus for TextBox-->
+            <ContentControl IsTabStop="True" IsTapEnabled="True" HorizontalContentAlignment="Center" VerticalAlignment="Center">
                 #
-            </TextBlock>
+            </ContentControl>
             <local:HexPicker x:Name="_HexPicker" Grid.Column="1" Height="24" BorderThickness="0" />
-            <local:StrawPicker x:Name="_StrawPicker" Grid.Column="3" Width="74" />
+            <local:EyedropperToolButton  x:Name="_StrawPicker" Grid.Column="3" >
+                <FontIcon Glyph="&#xEF3C;" FontFamily="Segoe MDL2 Assets" />
+            </local:EyedropperToolButton>
         </Grid>
 
         <!--ComboBox-->
